# baseproject

./: .dockerignore  .env.template  .gitignore  .pylintrc  Makefile  README.md  docker-compose-test.yml  docker-compose.yml  nginx.conf  pyproject.toml  ruff.toml  run-pre-build.sh
ci/dockerfiles/nginx/: Dockerfile
ci/dockerfiles/postgres/: Dockerfile
ci/dockerfiles/prod/: Dockerfile
ci/dockerfiles/test/: Dockerfile
ci/scripts/: entrypoint.sh
ci/services/: baseproject_web.service
conf/virtualenv/: requirements.txt
git-hooks/: pre-commit
src/baseproject/: asgi.py  gunicorn.py  settings.py  urls.py  uviworker.py  wsgi.py
src/baseproject/apps/frontend/: urls.py  views.py
src/baseproject/apps/frontend/static/css/: base.css
src/baseproject/apps/frontend/templates/frontend/: base.html  homepage.html
tests/: test_sample.py
