[project]
name = "baseproject"
version = "1.0.0"
requires-python = ">=3.13"
dependencies = [
    "Django==5.2.6",
    "asgiref==3.9.1",
    "sqlparse==0.5.3",
    "pytz==2025.2",
    "pillow==11.3.0",

    # Database
    "psycopg2-binary==2.9.11",

    # REST API
    "djangorestframework==3.16.1",
    "djangorestframework_simplejwt==5.5.1",
    "drf-spectacular==0.28.0",
    "coreapi==2.3.3",
    "coreschema==0.0.4",
    "openapi-codec==1.3.2",

    # Admin / UI
    "django-unfold==0.65.0",
    "django-colorfield==0.14.0",
    "django-ckeditor==6.5.1",
    "django-js-asset==3.1.2",
    "django-cors-headers==4.7.0",

    # Security and Cryptography
    "django-cryptography-5==2.0.3",
    "cryptography==45.0.7",

    # Utilities
    "concurrent-log-handler==0.9.28",
    "portalocker==3.2.0",
    "requests==2.32.5",
    "python-dateutil==2.9.0.post0",
    "simplejson==3.20.1",
    "stripe==12.5.1",
    "redis>=5.0,<6.0",
    "uvicorn==0.35.0",
    "gunicorn==23.0.0",

    # Typing and Validation
    "pydantic",
    "pydantic_core",
    "annotated-types==0.7.0",
]


[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-django==4.11.1",
    "ruff==0.12.12",
    "isort==6.0.1",
    "black",
    "pylint==3.3.8",
    "pylint-django==2.6.1",
    "pylint-plugin-utils==0.9.0",
    "mypy_extensions==1.1.0",
    "types-python-dateutil==2.9.0.20250822",
    "dill==0.4.0",
    "astroid==3.3.11",
    "lazy-object-proxy==1.12.0",
    "platformdirs==4.4.0",
    "pathspec==0.12.1",
    "tomlkit==0.13.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning:coreapi.*"]
